# whiskers-launcher-session-manager-extension

./: Cargo.toml  README.md  linux-extension  manifest.json  manifest.yml  package-lock.json
src/: actions.rs  handle_actions.rs  handle_results.rs  main.rs  results.rs
src/assets/: mod.rs
src/command/: mod.rs
src/resources/: mod.rs
