[package]
name = "session-manager"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = "1.0.181"
serde_json = "1.0.113"
fuzzy-matcher = "0.3.7"
open = "5.0.0"
tokio = { version = "1.32.0", features = ["full"] }
#whiskers-launcher-rs = { path = "/home/lighttigerxiv/Coding/Rust/Projects/whiskers-launcher-rs" }
whiskers-launcher-rs = { git = "https://github.com/lighttigerXIV/whiskers-launcher-rs" }
