[package]
name = "session-manager"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = "1.0.181"
serde_json = "1.0.113"
open = "5.0.0"
tokio = { version = "1.32.0", features = ["full"] }
#whiskers-launcher-rs = { path = "/home/lighttigerxiv/Projects/Cli/whiskers-launcher-rs" }
#whiskers-launcher-rs = { git = "https://github.com/lighttigerXIV/whiskers-launcher-rs" }
whiskers-launcher-rs = { path = "C:\\Users\\lighttigerxiv\\Projects\\WhiskersApps\\whiskers-launcher-rs" }
